--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,7 @@
+before_install:
+ - sudo deb http://ppa.launchpad.net/sonkun/sfml-development/ubuntu precise main 
+ - sudo deb-src http://ppa.launchpad.net/sonkun/sfml-development/ubuntu precise main 
+ - sudo apt-get update -qq
+ - sudo apt-get csfml sfml
 install: make
 language: cpp
