--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
- - sudo add-apt-repository ppa:sonkun/sfml-development
+ - sudo add-apt-repository ppa:sonkun/sfml-development -y
  - sudo apt-get update -qq
- - sudo apt-get csfml sfml
+ - sudo apt-get csfml sfml -qq
 install: make
 language: cpp
