--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 before_install:
  - sudo add-apt-repository ppa:sonkun/sfml-development -y
+ - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 15C8AD5D
+
  - sudo apt-get update -qq
- - sudo apt-get csfml sfml -qq
+ - sudo apt-get install csfml sfml -qq
 install: make
 language: cpp
